fix: better layout on iOS

--- a/src/app/common/kng-news/kng-news.component.scss
+++ b/src/app/common/kng-news/kng-news.component.scss
@@ -146,6 +146,7 @@
       >div{
         display: flex;
         flex-flow: row wrap;
+        justify-content: center;
         padding: 0px;
         font-size: 20px;
         overflow: hidden; 
@@ -155,9 +156,15 @@
         }
         .left-half{
           max-width: 40%;        
-          height: 300px;
+          height: 300px;          
+          overflow: hidden;
+          display: flex;
+          align-items: center;
+          justify-content: center;
           img{
-            height: 100%;          
+            width: 100%;          
+            object-fit: cover;
+            object-position: center center;
           }
           @media (max-width:429px) {
             max-width:100%;
